--- a/_posts/2016-02-08-safe_rm.md
+++ b/_posts/2016-02-08-safe_rm.md
@@ -100,7 +100,7 @@ $ vi ~/.saferm.sh
 将下面的脚本内容写入:
 
 ```sh
-TRASH_DIR="/Users/elias/.rmtrash"
+TRASH_DIR="/Users/ezra/.rmtrash"
 
 for i in $*; do
     STAMP=`date +%s`
@@ -109,7 +109,7 @@ for i in $*; do
 done
 ```
 
-其中 `/Users/elias/.rmtrash` 是回收站路径, 依据你的实际情况进行修改即可。
+其中 `/Users/ezra/.rmtrash` 是回收站路径, 依据你的实际情况进行修改即可。
 
 接着, 为 `rm` 创建别名:
 
