--- a/_posts/2018-05-17-Dart_Primer_002.md
+++ b/_posts/2018-05-17-Dart_Primer_002.md
@@ -53,7 +53,7 @@ print(r"br: \n"); // 输出字面值 "br: \n"
 在检查模式中, 与很多语言类似, 你也可以使用 `assert` 语句断言。
 
 ```dart
-var name = "Elias Abel";
+var name = "Ezra";
 assert(name == "Bob"); // 这里判断会失败, 检查模式下程序将被终止。
 ```
 
@@ -83,8 +83,8 @@ Hello, world! (2)
 相邻的字符串会被自动连接:
 
 ```dart
-var str6 = 'Elias'' ''Abel';
-// 这里有三个字符串分别是 'Elias' 和 ' ' 以及 'Abel'
+var str6 = 'Ezra'' ''Lee';
+// 这里有三个字符串分别是 'Ezra' 和 ' ' 以及 'Lee'
 ```
 
 ## 常量: const 与 final
