--- a/_posts/2018-05-17-Dart_Primer_004.md
+++ b/_posts/2018-05-17-Dart_Primer_004.md
@@ -37,7 +37,7 @@ class Person {
 
 void main() {
   Person p = new Person();
-  p ..name = 'Elias Abel'
+  p ..name = 'Ezra'
     ..setCountry('China');
   print(p);
 }
